--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-native-community/eslint-config": "^3.0.1",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
+    "@react-navigation/stack": "^6.0.11",
     "camelize": "^1.0.0",
     "expo": "~42.0.1",
     "expo-font": "^9.2.1",
@@ -22,12 +23,18 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "react-native-gesture-handler": "^1.10.3",
     "react-native-paper": "^4.9.2",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.4.0",
     "react-native-svg": "^12.1.1",
     "react-native-web": "~0.13.12",
-    "styled-components": "^5.3.3"
+    "styled-components": "^5.3.3",
+    "react-native-maps": "0.28.0",
+    "react-native-webview": "11.6.2",
+    "@react-native-async-storage/async-storage": "~1.15.0",
+    "firebase": "8.2.3",
+    "lottie-react-native": "4.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
